// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <Actions /> without throwing 1`] = `
.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c15 {
  padding: 0rem;
}

.c12 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c17 {
  width: 100%;
}

.c17 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 2rem;
  display: table-cell;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  color: rgba(73,73,73,1);
  font-weight: bold;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c13 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 9.375rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c13:not(:first-child) {
  border-left-width: 0;
}

.c13:not(:last-child) {
  border-right-width: 0;
}

.c14 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c14:not(:first-child) {
  border-left-width: 0;
}

.c14:not(:last-child) {
  border-right-width: 0;
}

.c16 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 3.75rem;
  display: table-cell;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c16:not(:first-child) {
  border-left-width: 0;
}

.c16:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c14 {
    width: 10rem;
    display: table-cell;
  }
}

<table
  className="c0"
>
  <thead
    className="c1"
    disabled={undefined}
    name="thdead"
    selected={undefined}
  >
    <tr
      className="c2"
      disabled={undefined}
      name="tr"
      selected={undefined}
    >
      <th
        className="c3 c4"
        disabled={undefined}
        name="th"
        selected={undefined}
      >
        <div
          className="c5 baseline-jVaZNU c5 c6"
          role="group"
          style={undefined}
        >
          <li
            className="c7"
          >
            <div
              checked={false}
              className="c8"
              disabled={false}
              id="bh"
              onChange={[Function]}
              type="checkbox"
            >
              <input
                checked={false}
                className="c9"
                disabled={false}
                id="bi"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="c10"
                htmlFor="bi"
              />
            </div>
          </li>
        </div>
      </th>
      <th
        className="c11"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Name 
        </span>
        <svg
          className="c12"
          height="6"
          innerRef={undefined}
          marginBottom="0.125rem"
          marginLeft="0.5625rem"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 9 6"
          width="9"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 1.386L7.648 0 4.5 3.228 1.352 0 0 1.386 4.5 6z"
            fill="rgba(73, 73, 73, 1)"
            fillRule="evenodd"
          />
        </svg>
      </th>
      <th
        className="c13"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Status 
        </span>
      </th>
      <th
        className="c14"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Created 
        </span>
      </th>
      <th
        className="c14"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Updated 
        </span>
      </th>
      <th
        className="c15 c16"
        disabled={undefined}
        name="th"
        selected={undefined}
      />
    </tr>
  </thead>
  <tbody
    className="c17"
    disabled={undefined}
    name="tbody"
    selected={undefined}
  />
</table>
`;

exports[`renders <Item /> without throwing 1`] = `
.c7 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c7[type='checkbox'],
.c7[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c7[type='number']::-webkit-inner-spin-button,
.c7[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c7[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c7[type='search']::-webkit-search-cancel-button,
.c7[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c7:checked + label::after {
  opacity: 1;
}

.c7:selected + label::after {
  opacity: 1;
}

.c7:checked + label {
  border-color: rgb(59,70,204);
}

.c7:selected + label {
  border-color: rgb(59,70,204);
}

.c7:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c1 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c3 {
  padding-top: 0.25rem;
}

.c9 {
  height: 0.6875rem;
  width: 0.6875rem;
  border-radius: 0.6875rem;
}

.c12 {
  padding: 0rem;
}

.c10 {
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 50%;
  display: inline-block;
}

.c8 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c8::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c6 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c5 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 label {
  font-weight: 400;
}

.c4 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c14 {
  cursor: pointer;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c2:not(:first-child) {
  border-left-width: 0;
}

.c2:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c13 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  border-bottom-width: 0;
  border-left-width: 0.0625rem !important;
}

.c13:not(:first-child) {
  border-left-width: 0;
}

.c13:not(:last-child) {
  border-right-width: 0;
}

.c0 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
}

.c0:last-child {
  box-shadow: none;
}

.c0:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c11 {
    width: 10rem;
    display: table-cell;
  }
}

<tr
  className="c0"
  disabled={undefined}
  name="tr"
  selected={undefined}
>
  <td
    className="c1 c2"
    disabled={undefined}
    name="td"
    selected={undefined}
  >
    <div
      className="c3 baseline-jVaZNU c3 c4"
      name={undefined}
      role="group"
      style={undefined}
    >
      <li
        className="c5"
      >
        <div
          checked={false}
          className="c6"
          disabled={false}
          id="Z"
          type="checkbox"
        >
          <input
            checked={false}
            className="c7"
            disabled={false}
            id="a"
            type="checkbox"
          />
          <label
            className="c8"
            htmlFor="a"
          />
        </div>
      </li>
    </div>
  </td>
  <td
    className="c2"
    disabled={undefined}
    name="td"
    selected={undefined}
  />
  <td
    className="c2"
    disabled={undefined}
    name="td"
    selected={undefined}
  >
    <span
      className="c9 c10"
      color={undefined}
      height="0.6875rem"
      width="0.6875rem"
    />
     
    
  </td>
  <td
    className="c11"
    disabled={undefined}
    name="td"
    selected={undefined}
  >
    almost NaN years
  </td>
  <td
    className="c11"
    disabled={undefined}
    name="td"
    selected={undefined}
  >
    almost NaN years
  </td>
  <td
    className="c12 c13"
    disabled={undefined}
    name="td"
    selected={undefined}
  >
    <div
      box={true}
      className="c14"
      onClick={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      tag="div"
    >
      <svg
        className=""
        height="16"
        innerRef={undefined}
        style={
          Object {
            "transform": "rotate(0deg)",
          }
        }
        viewBox="0 0 4 16"
        width="4"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
          fill="rgba(73, 73, 73, 1)"
          fill-rule="evenodd"
        />
        <path
          d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
          fill="rgba(73, 73, 73, 1)"
          fill-rule="evenodd"
          style={
            Object {
              "transform": "translateY(0.375rem)",
            }
          }
        />
        <path
          d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
          fill="rgba(73, 73, 73, 1)"
          fill-rule="evenodd"
          style={
            Object {
              "transform": "translateY(0.75rem)",
            }
          }
        />
      </svg>
    </div>
  </td>
</tr>
`;

exports[`renders <Item {...item} /> without throwing 1`] = `
.c7 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c7[type='checkbox'],
.c7[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c7[type='number']::-webkit-inner-spin-button,
.c7[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c7[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c7[type='search']::-webkit-search-cancel-button,
.c7[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c7:checked + label::after {
  opacity: 1;
}

.c7:selected + label::after {
  opacity: 1;
}

.c7:checked + label {
  border-color: rgb(59,70,204);
}

.c7:selected + label {
  border-color: rgb(59,70,204);
}

.c7:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c1 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c3 {
  padding-top: 0.25rem;
}

.c9 {
  height: 0.6875rem;
  width: 0.6875rem;
  border-radius: 0.6875rem;
}

.c12 {
  padding: 0rem;
}

.c10 {
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 50%;
  display: inline-block;
}

.c8 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c8::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c6 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c5 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 label {
  font-weight: 400;
}

.c4 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c14 {
  cursor: pointer;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c2:not(:first-child) {
  border-left-width: 0;
}

.c2:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c13 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  border-bottom-width: 0;
  border-left-width: 0.0625rem !important;
}

.c13:not(:first-child) {
  border-left-width: 0;
}

.c13:not(:last-child) {
  border-right-width: 0;
}

.c0 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
}

.c0:last-child {
  box-shadow: none;
}

.c0:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c11 {
    width: 10rem;
    display: table-cell;
  }
}

<tr
  className="c0"
  disabled={undefined}
  name="tr"
  selected={undefined}
>
  <td
    className="c1 c2"
    disabled={undefined}
    name="td"
    selected={undefined}
  >
    <div
      className="c3 baseline-jVaZNU c3 c4"
      name="name"
      role="group"
      style={undefined}
    >
      <li
        className="c5"
      >
        <div
          checked={false}
          className="c6"
          disabled={false}
          id="bb"
          type="checkbox"
        >
          <input
            checked={false}
            className="c7"
            disabled={false}
            id="bc"
            type="checkbox"
          />
          <label
            className="c8"
            htmlFor="bc"
          />
        </div>
      </li>
    </div>
  </td>
  <td
    className="c2"
    disabled={undefined}
    name="td"
    selected={undefined}
  >
    name
  </td>
  <td
    className="c2"
    disabled={undefined}
    name="td"
    selected={undefined}
  >
    <span
      className="c9 c10"
      color={undefined}
      height="0.6875rem"
      width="0.6875rem"
    />
     
    Started
  </td>
  <td
    className="c11"
    disabled={undefined}
    name="td"
    selected={undefined}
  >
    about 1 month
  </td>
  <td
    className="c11"
    disabled={undefined}
    name="td"
    selected={undefined}
  >
    about 1 month
  </td>
  <td
    className="c12 c13"
    disabled={undefined}
    name="td"
    selected={undefined}
  >
    <div
      box={true}
      className="c14"
      onClick={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      tag="div"
    >
      <svg
        className=""
        height="16"
        innerRef={undefined}
        style={
          Object {
            "transform": "rotate(0deg)",
          }
        }
        viewBox="0 0 4 16"
        width="4"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
          fill="rgba(73, 73, 73, 1)"
          fill-rule="evenodd"
        />
        <path
          d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
          fill="rgba(73, 73, 73, 1)"
          fill-rule="evenodd"
          style={
            Object {
              "transform": "translateY(0.375rem)",
            }
          }
        />
        <path
          d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
          fill="rgba(73, 73, 73, 1)"
          fill-rule="evenodd"
          style={
            Object {
              "transform": "translateY(0.75rem)",
            }
          }
        />
      </svg>
    </div>
  </td>
</tr>
`;

exports[`renders <Item mutating /> without throwing 1`] = `
.c5 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
}

.c6 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.c7 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 1s;
  animation-delay: 1s;
}

.c8 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  text-align: center;
  margin-bottom: 0;
  margin-left: 0.375rem;
}

.c8 + p,
.c8 + small,
.c8 + h1,
.c8 + h2,
.c8 + label,
.c8 + h3,
.c8 + h4,
.c8 + h5,
.c8 + div,
.c8 + span {
  padding-bottom: 2.25rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 1.25rem;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
}

.c1 tr:first-child td {
  border-top: none;
}

.c3 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  border-bottom-width: 0;
}

.c3:not(:first-child) {
  border-left-width: 0;
}

.c3:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

<table
  className="c0"
>
  <tbody
    className="c1"
    disabled={undefined}
    name="tbody"
    selected={undefined}
  >
    <tr
      className="c2"
      disabled={undefined}
      name="tr"
      selected={undefined}
    >
      <td
        className="c3"
        colSpan="6"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <div
          className="c4"
        >
          <svg
            height="10"
            width="28"
          >
            <rect
              className="c5"
              height="6"
              width="6"
              x="2"
              y="2"
            />
            <rect
              className="c6"
              height="6"
              width="6"
              x="11"
              y="2"
            />
            <rect
              className="c7"
              height="6"
              width="6"
              x="20"
              y="2"
            />
          </svg>
          <p
            className="c8"
          >
            Loading...
          </p>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders <SnapshotList /> without throwing 1`] = `
.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c15 {
  padding: 0rem;
}

.c12 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c17 {
  width: 100%;
}

.c17 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 2rem;
  display: table-cell;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  color: rgba(73,73,73,1);
  font-weight: bold;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c13 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 9.375rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c13:not(:first-child) {
  border-left-width: 0;
}

.c13:not(:last-child) {
  border-right-width: 0;
}

.c14 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c14:not(:first-child) {
  border-left-width: 0;
}

.c14:not(:last-child) {
  border-right-width: 0;
}

.c16 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 3.75rem;
  display: table-cell;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c16:not(:first-child) {
  border-left-width: 0;
}

.c16:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c14 {
    width: 10rem;
    display: table-cell;
  }
}

<table
  className="c0"
>
  <thead
    className="c1"
    disabled={undefined}
    name="thdead"
    selected={undefined}
  >
    <tr
      className="c2"
      disabled={undefined}
      name="tr"
      selected={undefined}
    >
      <th
        className="c3 c4"
        disabled={undefined}
        name="th"
        selected={undefined}
      >
        <div
          className="c5 baseline-jVaZNU c5 c6"
          role="group"
          style={undefined}
        >
          <li
            className="c7"
          >
            <div
              checked={false}
              className="c8"
              disabled={false}
              id="be"
              onChange={[Function]}
              type="checkbox"
            >
              <input
                checked={false}
                className="c9"
                disabled={false}
                id="bf"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="c10"
                htmlFor="bf"
              />
            </div>
          </li>
        </div>
      </th>
      <th
        className="c11"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Name 
        </span>
        <svg
          className="c12"
          height="6"
          innerRef={undefined}
          marginBottom="0.125rem"
          marginLeft="0.5625rem"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 9 6"
          width="9"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 1.386L7.648 0 4.5 3.228 1.352 0 0 1.386 4.5 6z"
            fill="rgba(73, 73, 73, 1)"
            fillRule="evenodd"
          />
        </svg>
      </th>
      <th
        className="c13"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Status 
        </span>
      </th>
      <th
        className="c14"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Created 
        </span>
      </th>
      <th
        className="c14"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Updated 
        </span>
      </th>
      <th
        className="c15 c16"
        disabled={undefined}
        name="th"
        selected={undefined}
      />
    </tr>
  </thead>
  <tbody
    className="c17"
    disabled={undefined}
    name="tbody"
    selected={undefined}
  />
</table>
`;

exports[`renders <SnapshotList allSelected /> without throwing 1`] = `
.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c15 {
  padding: 0rem;
}

.c12 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c17 {
  width: 100%;
}

.c17 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 2rem;
  display: table-cell;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  color: rgba(73,73,73,1);
  font-weight: bold;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c13 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 9.375rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c13:not(:first-child) {
  border-left-width: 0;
}

.c13:not(:last-child) {
  border-right-width: 0;
}

.c14 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c14:not(:first-child) {
  border-left-width: 0;
}

.c14:not(:last-child) {
  border-right-width: 0;
}

.c16 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 3.75rem;
  display: table-cell;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c16:not(:first-child) {
  border-left-width: 0;
}

.c16:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c14 {
    width: 10rem;
    display: table-cell;
  }
}

<table
  className="c0"
>
  <thead
    className="c1"
    disabled={undefined}
    name="thdead"
    selected={undefined}
  >
    <tr
      className="c2"
      disabled={undefined}
      name="tr"
      selected={undefined}
    >
      <th
        className="c3 c4"
        disabled={undefined}
        name="th"
        selected={undefined}
      >
        <div
          className="c5 baseline-jVaZNU c5 c6"
          role="group"
          style={undefined}
        >
          <li
            className="c7"
          >
            <div
              checked={true}
              className="c8"
              disabled={false}
              id="bt"
              onChange={[Function]}
              type="checkbox"
            >
              <input
                checked={true}
                className="c9"
                disabled={false}
                id="bu"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="c10"
                htmlFor="bu"
              />
            </div>
          </li>
        </div>
      </th>
      <th
        className="c11"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Name 
        </span>
        <svg
          className="c12"
          height="6"
          innerRef={undefined}
          marginBottom="0.125rem"
          marginLeft="0.5625rem"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 9 6"
          width="9"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 1.386L7.648 0 4.5 3.228 1.352 0 0 1.386 4.5 6z"
            fill="rgba(73, 73, 73, 1)"
            fillRule="evenodd"
          />
        </svg>
      </th>
      <th
        className="c13"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Status 
        </span>
      </th>
      <th
        className="c14"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Created 
        </span>
      </th>
      <th
        className="c14"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Updated 
        </span>
      </th>
      <th
        className="c15 c16"
        disabled={undefined}
        name="th"
        selected={undefined}
      />
    </tr>
  </thead>
  <tbody
    className="c17"
    disabled={undefined}
    name="tbody"
    selected={undefined}
  />
</table>
`;

exports[`renders <SnapshotList sortBy /> without throwing 1`] = `
.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c15 {
  padding: 0rem;
}

.c13 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c17 {
  width: 100%;
}

.c17 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 2rem;
  display: table-cell;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c14 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c14:not(:first-child) {
  border-left-width: 0;
}

.c14:not(:last-child) {
  border-right-width: 0;
}

.c16 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 3.75rem;
  display: table-cell;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c16:not(:first-child) {
  border-left-width: 0;
}

.c16:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c12 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 9.375rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  color: rgba(73,73,73,1);
  font-weight: bold;
}

.c12:not(:first-child) {
  border-left-width: 0;
}

.c12:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c14 {
    width: 10rem;
    display: table-cell;
  }
}

<table
  className="c0"
>
  <thead
    className="c1"
    disabled={undefined}
    name="thdead"
    selected={undefined}
  >
    <tr
      className="c2"
      disabled={undefined}
      name="tr"
      selected={undefined}
    >
      <th
        className="c3 c4"
        disabled={undefined}
        name="th"
        selected={undefined}
      >
        <div
          className="c5 baseline-jVaZNU c5 c6"
          role="group"
          style={undefined}
        >
          <li
            className="c7"
          >
            <div
              checked={false}
              className="c8"
              disabled={false}
              id="bk"
              onChange={[Function]}
              type="checkbox"
            >
              <input
                checked={false}
                className="c9"
                disabled={false}
                id="bl"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="c10"
                htmlFor="bl"
              />
            </div>
          </li>
        </div>
      </th>
      <th
        className="c11"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Name 
        </span>
      </th>
      <th
        className="c12"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Status 
        </span>
        <svg
          className="c13"
          height="6"
          innerRef={undefined}
          marginBottom="0.125rem"
          marginLeft="0.5625rem"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 9 6"
          width="9"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 1.386L7.648 0 4.5 3.228 1.352 0 0 1.386 4.5 6z"
            fill="rgba(73, 73, 73, 1)"
            fillRule="evenodd"
          />
        </svg>
      </th>
      <th
        className="c14"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Created 
        </span>
      </th>
      <th
        className="c14"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Updated 
        </span>
      </th>
      <th
        className="c15 c16"
        disabled={undefined}
        name="th"
        selected={undefined}
      />
    </tr>
  </thead>
  <tbody
    className="c17"
    disabled={undefined}
    name="tbody"
    selected={undefined}
  />
</table>
`;

exports[`renders <SnapshotList sortBy sortOrder /> without throwing 1`] = `
.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c15 {
  padding: 0rem;
}

.c13 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c17 {
  width: 100%;
}

.c17 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 2rem;
  display: table-cell;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c14 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c14:not(:first-child) {
  border-left-width: 0;
}

.c14:not(:last-child) {
  border-right-width: 0;
}

.c16 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 3.75rem;
  display: table-cell;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c16:not(:first-child) {
  border-left-width: 0;
}

.c16:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c12 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 9.375rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  color: rgba(73,73,73,1);
  font-weight: bold;
}

.c12:not(:first-child) {
  border-left-width: 0;
}

.c12:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c14 {
    width: 10rem;
    display: table-cell;
  }
}

<table
  className="c0"
>
  <thead
    className="c1"
    disabled={undefined}
    name="thdead"
    selected={undefined}
  >
    <tr
      className="c2"
      disabled={undefined}
      name="tr"
      selected={undefined}
    >
      <th
        className="c3 c4"
        disabled={undefined}
        name="th"
        selected={undefined}
      >
        <div
          className="c5 baseline-jVaZNU c5 c6"
          role="group"
          style={undefined}
        >
          <li
            className="c7"
          >
            <div
              checked={false}
              className="c8"
              disabled={false}
              id="bn"
              onChange={[Function]}
              type="checkbox"
            >
              <input
                checked={false}
                className="c9"
                disabled={false}
                id="bo"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="c10"
                htmlFor="bo"
              />
            </div>
          </li>
        </div>
      </th>
      <th
        className="c11"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Name 
        </span>
      </th>
      <th
        className="c12"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Status 
        </span>
        <svg
          className="c13"
          height="6"
          innerRef={undefined}
          marginBottom="0.125rem"
          marginLeft="0.5625rem"
          style={
            Object {
              "transform": "rotate(0deg)",
            }
          }
          viewBox="0 0 9 6"
          width="9"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 1.386L7.648 0 4.5 3.228 1.352 0 0 1.386 4.5 6z"
            fill="rgba(73, 73, 73, 1)"
            fillRule="evenodd"
          />
        </svg>
      </th>
      <th
        className="c14"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Created 
        </span>
      </th>
      <th
        className="c14"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Updated 
        </span>
      </th>
      <th
        className="c15 c16"
        disabled={undefined}
        name="th"
        selected={undefined}
      />
    </tr>
  </thead>
  <tbody
    className="c17"
    disabled={undefined}
    name="tbody"
    selected={undefined}
  />
</table>
`;

exports[`renders <SnapshotList submitting /> without throwing 1`] = `
.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c15 {
  padding: 0rem;
}

.c12 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c17 {
  width: 100%;
}

.c17 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 2rem;
  display: table-cell;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  color: rgba(73,73,73,1);
  font-weight: bold;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c13 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 9.375rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c13:not(:first-child) {
  border-left-width: 0;
}

.c13:not(:last-child) {
  border-right-width: 0;
}

.c14 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c14:not(:first-child) {
  border-left-width: 0;
}

.c14:not(:last-child) {
  border-right-width: 0;
}

.c16 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 3.75rem;
  display: table-cell;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c16:not(:first-child) {
  border-left-width: 0;
}

.c16:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c14 {
    width: 10rem;
    display: table-cell;
  }
}

<table
  className="c0"
>
  <thead
    className="c1"
    disabled={undefined}
    name="thdead"
    selected={undefined}
  >
    <tr
      className="c2"
      disabled={undefined}
      name="tr"
      selected={undefined}
    >
      <th
        className="c3 c4"
        disabled={undefined}
        name="th"
        selected={undefined}
      >
        <div
          className="c5 baseline-jVaZNU c5 c6"
          role="group"
          style={undefined}
        >
          <li
            className="c7"
          >
            <div
              checked={false}
              className="c8"
              disabled={true}
              id="bq"
              onChange={[Function]}
              type="checkbox"
            >
              <input
                checked={false}
                className="c9"
                disabled={true}
                id="br"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="c10"
                htmlFor="br"
              />
            </div>
          </li>
        </div>
      </th>
      <th
        className="c11"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Name 
        </span>
        <svg
          className="c12"
          height="6"
          innerRef={undefined}
          marginBottom="0.125rem"
          marginLeft="0.5625rem"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 9 6"
          width="9"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 1.386L7.648 0 4.5 3.228 1.352 0 0 1.386 4.5 6z"
            fill="rgba(73, 73, 73, 1)"
            fillRule="evenodd"
          />
        </svg>
      </th>
      <th
        className="c13"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Status 
        </span>
      </th>
      <th
        className="c14"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Created 
        </span>
      </th>
      <th
        className="c14"
        disabled={undefined}
        name="th"
        onClick={[Function]}
        selected={undefined}
      >
        <span>
          Updated 
        </span>
      </th>
      <th
        className="c15 c16"
        disabled={undefined}
        name="th"
        selected={undefined}
      />
    </tr>
  </thead>
  <tbody
    className="c17"
    disabled={undefined}
    name="tbody"
    selected={undefined}
  />
</table>
`;
